--- a/client/main.css
+++ b/client/main.css
@@ -62,7 +62,10 @@ nav {
   color: white;
   background-color: #798fe6;
 }
-.nav-item{
+
+.navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link{
+  color: rgb(230, 230, 230);
+  background-color: rgba(36, 41, 104, 0.61);
   cursor: pointer;
 }
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
