--- a/client/main.css
+++ b/client/main.css
@@ -72,3 +72,12 @@ nav {
     color: white;
     background-color: #001e96;
 }
+
+hr {
+  border: 0;
+  clear:both;
+  display:block;
+  width: 96%;
+  background-color:#FFFF00;
+  height: 1px;
+}
